--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Yet Another Exchanger</string>
+    <string name="my_balances">My Balances</string>
+    <string name="currency_exchange">Currency Exchange</string>
+    <string name="submit">Submit</string>
+    <string name="sell">Sell</string>
+    <string name="receive">Receive</string>
 </resources>
