--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="sell">Sell</string>
     <string name="receive">Receive</string>
     <string name="currency_converted">Currency converted</string>
-    <string name="converted_without_fee_template">You have converted %s to %s.</string>
-    <string name="converted_with_fee_template">You have converted %s to %s. Commission Fee: %s</string>
+    <string name="converted_without_fee_template">You have converted %1$s to %2$s.</string>
+    <string name="converted_with_fee_template">You have converted %1$s to %2$s. Commission Fee: %3$s</string>
     <string name="receive_template">+%1$s</string>
 </resources>
